--- a/workorders.css
+++ b/workorders.css
@@ -20,10 +20,7 @@ body {
     overflow-x: auto; /* Enable horizontal scrolling if needed */
 }
 
-td.work-order-number {
-    word-wrap: break-word; /* Enables text wrapping */
-    max-width: 150px; /* Set a maximum width to control wrapping */
-}
+
 
 
 td.date {
@@ -47,6 +44,15 @@ th {
     color: white;
 }
 
+td.work-order-number {
+    word-wrap: break-word; /* Enables text wrapping */
+    max-width: 150px; /* Set a maximum width to control wrapping */
+}
+th.work-order-number {
+    word-wrap: break-word; /* Enables text wrapping */
+    max-width: 150px; /* Set a maximum width to control wrapping */
+}
+
 tr:nth-child(even) {
     background-color: #f9f9f9;
 }
@@ -56,6 +62,7 @@ tr:hover {
 }
 
 .btn {
+    display: inline-block;
     padding: 6px 12px;
     margin: 2px;
     border-radius: 5px;
@@ -139,4 +146,94 @@ tr:hover {
     .modal-content {
         width: 90%; /* Adjust width for smaller screens */
     }
+}
+
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: white;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+form label {
+    margin-top: 10px;
+}
+
+form input[type="text"],
+form input[type="number"],
+form input[type="date"] {
+    padding: 8px;
+    margin-top: 5px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+form select {
+    flex: 1 1 100%;
+    padding: 10px;
+    font-size: 1em;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    appearance: none; /* Remove default arrow on select */
+    background-color: #ffffff;
+    background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNiIgaGVpZ2h0PSIxNiIgdmlld0JveD0iMCAwIDE2IDE2Ij4gPHBhdGggZD0iTTUgNmwzIDMgMy0zSDB6IiBmaWxsPSIjNjY2Ii8+IDwvc3ZnPg==');
+    background-position: right 10px center;
+    background-repeat: no-repeat;
+}
+form button {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    /* border-radius: 4px; */
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #45a049;
+}
+
+.filter-input, .excel-filter {
+    width: 100%;
+    padding: 4px;
+    margin-bottom: 5px;
+    box-sizing: border-box;
 }
