--- a/enter_dispatch.css
+++ b/enter_dispatch.css
@@ -76,3 +76,15 @@ input[type="submit"]:hover {
     padding: 0;
     list-style: none;
 }
+.select2-container .select2-selection--single {
+    height: 40px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    margin-bottom: 15px;
+}
+
+.select2-container--default .select2-selection--single {
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
