--- a/enter_drawing.css
+++ b/enter_drawing.css
@@ -58,7 +58,7 @@ input[type="file"] {
 }
 
 input[type="submit"] {
-    background-color: #007BFF;
+    background-color: #4CAF50;
     color: white;
     cursor: pointer;
     font-weight: bold;
@@ -67,7 +67,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #45a049;
 }
 
 /* Alerts */
